--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
     <script>
         function sendCommand(command) {
-            fetch("http://192.168.2.6"/ + command)  // Substituir pelo IP do ESP32
+            fetch("http://192.168.2.6" + command)  // Substituir pelo IP do ESP32
                 .then(response => response.text())
                 .then(data => console.log(data))
                 .catch(error => console.error('Erro:', error));
